<resources>
    <!-- App Strings -->
    <string name="app_name">BetSafe</string>
    <string name="unknown">Unknown</string>

    <!-- Action Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_create_bankroll">New Bankroll</string>
    <string name="action_add_bet">Add Bet</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit">Edit</string>
    <string name="action_options">Options</string>
    <string name="action_share">Share</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>

    <!-- Screen Titles -->
    <string name="screen_title_add_bankroll">Add Bankroll</string>
    <string name="screen_title_add_bet">Add Bet</string>
    <string name="screen_title_settings">Settings</string>
    <string name="screen_title_edit_bankroll">Edit Bankroll</string>

    <!-- Hints -->
    <string name="hint_bankroll_name">Bankroll Name</string>
    <string name="hint_bankroll_initial_amount">Initial Amount</string>
    <string name="hint_bet_name">Event Title</string>
    <string name="hint_bookmaker_name">Bookmaker</string>
    <string name="hint_stake">Stake</string>
    <string name="hint_odd">Odd</string>
    <string name="hint_event_name">Event Name</string>

    <!-- Labels -->
    <string name="label_bankroll_privacy">Bankroll Privacy</string>
    <string name="label_sports">Sports</string>
    <string name="label_bankrolls">Bankroll</string>
    <string name="label_status">Status</string>
    <string name="label_pick">Pick</string>

    <!-- Bet Labels -->
    <string name="label_bet_pick"><b>Pick:</b> %1$s</string>
    <string name="label_bet_stake"><b>Stake:</b> %1$f</string>
    <string name="label_bet_status"><b>Status:</b> %1$s</string>
    <string name="label_bet_date"><b>Date:</b> %1$s</string>
    <string name="label_bet_odd"><b>Odd:</b> %1$f</string>
    <string name="label_bet_booker"><b>Booker:</b> %1$s</string>
    <string name="label_bet_sport"><b>Sport:</b> %1$s</string>

    <!-- Bet Status -->
    <string name="text_bet_status_pending">Pending</string>
    <string name="text_bet_status_won">Won</string>
    <string name="text_bet_status_lost">Lost</string>
    <string name="text_bet_status_draw">Draw</string>
    <string name="text_bet_status_cancel">Cancelled</string>
    <string name="text_bet_status_postponed">Postponed</string>

    <!-- Button Names -->
    <string name="button_name_add_bankroll">Create Bankroll</string>
    <string name="button_name_add_bet">Add Bet</string>
    <string name="button_continue">Continue</string>
    <string name="button_cancel">Cancel</string>

    <!-- Snackbar Button Names -->
    <string name="snackbar_button_add">Add</string>

    <!-- Success Messages -->
    <string name="success_message_new_bankroll_created">New Bankroll created successfully!</string>
    <string name="success_message_new_bet_added_to_bankroll">Your bet added. Good luck!</string>
    <string name="success_message_bankroll_deleted">Bankroll named %1$s, deleted successfully!</string>
    <string name="success_message_bankroll_closed">Bankroll named %1$S, closed successfully!</string>
    <string name="success_message_bet_removed">%1$s deleted successfully!</string>

    <!-- Error Messages -->
    <string name="error_message_cannot_create_bankroll">An unknown error occurred!</string>
    <string name="error_message_empty_bankrolls">You need to add a Bankroll first.</string>
    <string name="error_message_add_bet">Bet could not be added. Please try again!</string>
    <string name="error_message_validate_add_bet_inputs">All fields are required. Please check your inputs.</string>

    <!-- Dialog Messages -->
    <string name="dialog_message_delete_bankroll">Are you sure to delete this Bankroll? Your data will be deleted permanently.</string>
    <string name="dialog_message_close_bankroll">Are you sure to close this Bankroll?</string>

    <!-- Tab Titles -->
    <string-array name="tabs_bankroll">
        <item>Details</item>
        <item>Bets</item>
    </string-array>

    <!-- Banroll Privacy Types -->
    <string-array name="bankroll_privacy_types">
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <!-- Sport -->
    <string-array name="sports">
        <item>Football</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Other</item>
    </string-array>

    <!-- Bet Status -->
    <string-array name="bet_status">
        <item>@string/text_bet_status_pending</item>
        <item>@string/text_bet_status_won</item>
        <item>@string/text_bet_status_lost</item>
        <item>@string/text_bet_status_draw</item>
        <item>@string/text_bet_status_cancel</item>
        <item>@string/text_bet_status_postponed</item>
    </string-array>

    <!-- Picks -->
    <string-array name="picks">
        <item>Home</item>
        <item>Away</item>
        <item>Over 2.5</item>
        <item>Under 2.5</item>
    </string-array>

</resources>
