<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.betsafeapp.android.bankroll.BankRollActivity">

    <item
        android:id="@+id/action_add_bet"
        android:icon="@mipmap/ic_add_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_add_bet"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@mipmap/ic_share_white_24dp"
        android:orderInCategory="2"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="3"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_close"
        android:orderInCategory="4"
        android:title="@string/action_close"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="5"
        android:title="@string/action_delete"
        app:showAsAction="never" />

</menu>